syntax = "proto3";

package proto;

option go_package ="./";

// Master Service
service MasterService {
  rpc GetChunkLocations(GetChunkRequest) returns (GetChunkResponse);
  rpc ReportChunk(ChunkReport) returns (ChunkResponse);
}



service HeartbeatService {
  rpc SendHeartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}



// Request to get chunk location from the Master Server
message GetChunkRequest {
  string file_name = 1;
  int32 chunk_index = 2;
}

// Response containing chunk locations
message GetChunkResponse {
  string chunk_id = 1;
  repeated string chunk_servers = 2;
  bool success = 3;
}

// Chunk Server reporting new chunk
message ChunkReport {
  string chunk_id = 1;
  string server_id = 2;
  int32 version = 3;
}

// Response from the Master
message ChunkResponse {
  bool success = 1;
  string message = 2;
}

// Heartbeat from Chunk Servers
message HeartbeatRequest {
  string server_id = 1;
  int64 free_space = 2;
  repeated string stored_chunks = 3;
}

// Heartbeat Response
message HeartbeatResponse {
  bool success = 1;
  string message = 2;
}
